Fix player mark so it is centered on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
   max-width: 90%;
   margin: auto;
   display: flex;
-  padding: 2rem;
   text-align: center;
   justify-content: center;
 }
