--- a/src/components/BoardSquare.css
+++ b/src/components/BoardSquare.css
@@ -5,7 +5,8 @@
   width: 100px;
   float: left;
   text-align: center;
-  font-size: 3rem;
+  align-items: center;
+  font-size: 2rem;
   font-weight: 600;
   font-family: inherit;
 }
